fixed dependencies
(cherry picked from commit d0ff48b)